apps/base/kuard/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kuard
  labels:
    toolkit.fluxcd.io/tenant: dev-team
