apps/base/kuard/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kuard-service
spec:
  ports:
    - name: http
      port: 8080
  selector:
    app: containous
    task: kuard-task
