apps/base/kuard/ingress-route-http.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kuard-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: kuard.coding-challenge.hess.lan
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kuard-service
                port:
                  number: 8080
